Completed Swagger docs setup
